<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dv606.el222ja.assignment1.BMIActivity">

    <EditText
        android:id="@+id/heightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textSize="20dp"
        android:layout_below="@+id/heightTV"
        android:layout_alignStart="@+id/heightTV" />

    <TextView
        android:id="@+id/heightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heightText"
        android:textSize="20dp"
        android:layout_below="@+id/TitleTV" />

    <TextView
        android:id="@+id/TitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BMITitle"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/heightTV" />

    <TextView
        android:id="@+id/weightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weightText"
        android:textSize="20dp"
        android:layout_below="@+id/heightText" />

    <EditText
        android:id="@+id/weightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textSize="20dp"
        android:layout_below="@+id/weightTV"
        android:layout_alignStart="@+id/weightTV" />

    <Button
        android:id="@+id/ComputeB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/ResetB"
        android:text="@string/computeB" />

    <Button
        android:id="@+id/ResetB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetB"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/BMIText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ComputeB"
        android:layout_below="@+id/weightText"
        android:layout_alignParentStart="false"
        android:gravity="center"
        android:textSize="100dp"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
